--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8,6 +8,30 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{fraley1980monte,
+  title={A Monte Carlo method of solving heat conduction problems},
+  author={Fraley, Stanley Kenneth and Hoffman, TJ and Stevens, PN},
+  journal={Journal of Heat Transfer},
+  volume={102},
+  number={1},
+  pages={121--125},
+  year={1980},
+  publisher={American Society of Mechanical Engineers}
+}
+
+@article{jun2007monte,
+  title={A Monte Carlo Method of Solving Heat Conduction Problems with Complicated Geometry},
+  author={Jun, Shentu and Yun, Sunghwan and Cho, Nam Zin},
+  year={2007},
+  publisher={Korean Nuclear Society}
+}
+
+@article{ferreira2015orthogonal,
+  title={Orthogonal systems of Zernike type in polygons and polygonal facets},
+  author={Ferreira, Chelo and Lopez, Jose L and Navarro, Rafael and Sinusia, Ester Perez},
+  journal={arXiv preprint arXiv:1506.07396},
+  year={2015}
+}
 
 @Article{Henry,
   author =       " A. F., Henry",
