added pics and updated the future work section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,6 +18,50 @@
   year={1980},
   publisher={American Society of Mechanical Engineers}
 }
+@article{viitanen2012explicit,
+  title={Explicit treatment of thermal motion in continuous-energy Monte Carlo tracking routines},
+  author={Viitanen, Tuomas and Lepp{\"a}nen, Jaakko},
+  journal={Nuclear Science and Engineering},
+  volume={171},
+  number={2},
+  pages={165--173},
+  year={2012},
+  publisher={American Nuclear Society}
+}
+@article{griesheimer2008integrated,
+  title={An integrated thermal hydraulic feedback method for Monte Carlo reactor calculations},
+  author={Griesheimer, David P and Aumiller, David L and Gill, Daniel F and Lane, Jeffrey W},
+  year={2008}
+}
+@article{josey2016windowed,
+  title={Windowed multipole for cross section Doppler broadening},
+  author={Josey, C and Ducru, P and Forget, B and Smith, K},
+  journal={Journal of Computational Physics},
+  volume={307},
+  pages={715--727},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{leppanen2013modeling,
+  title={Modeling of nonuniform density distributions in the Serpent 2 Monte Carlo code},
+  author={Lepp{\"a}nen, Jaakko},
+  journal={Nuclear Science and Engineering},
+  volume={174},
+  number={3},
+  pages={318--325},
+  year={2013},
+  publisher={American Nuclear Society}
+}
+
+@article{bowman2007overview,
+  title={Overview of the SCALE code system},
+  author={Bowman, SM},
+  journal={TRANSACTIONS-AMERICAN NUCLEAR SOCIETY},
+  volume={97},
+  pages={589},
+  year={2007},
+  publisher={AMERICAN NUCLEAR SOCIETY}
+}
 
 @article{jun2007monte,
   title={A Monte Carlo Method of Solving Heat Conduction Problems with Complicated Geometry},
