added figures and completed 1st draft. still needs conclusion

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,6 +28,51 @@
   year={2012},
   publisher={American Nuclear Society}
 }
+@inproceedings{song2007improved,
+  title={An Improved Monte Carlo Method Applied to Heat Conduction Problem of a Fuel Pebble},
+  author={Song, Jae Hoon and Cho, Nam Zin},
+  booktitle={Transactions of the Korean Nuclear Society Autumn Meeting},
+  pages={25--26},
+  year={2007}
+}
+@article{fraley1980monte,
+  title={A Monte Carlo method of solving heat conduction problems},
+  author={Fraley, Stanley Kenneth and Hoffman, TJ and Stevens, PN},
+  journal={Journal of Heat Transfer},
+  volume={102},
+  number={1},
+  pages={121--125},
+  year={1980},
+  publisher={American Society of Mechanical Engineers}
+}
+@article{hoffman1976monte,
+  title={Monte Carlo solution to heat conduction problems with internal sources},
+  author={Hoffman, TJ},
+  journal={Trans. Am. Nucl. Soc.;(United States)},
+  volume={24},
+  year={1976},
+  publisher={Oak Ridge National Lab., TN}
+}
+@article{haji1967solution,
+  title={The solution of heat conduction problems by probability methods},
+  author={Haji-Sheikh, A and Sparrow, Ephraim M},
+  journal={Journal of Heat Transfer},
+  volume={89},
+  number={2},
+  pages={121--130},
+  year={1967},
+  publisher={American Society of Mechanical Engineers}
+}
+
+@article{griesheimer2004two,
+  title={Two dimensional functional expansion tallies for Monte Carlo simulations},
+  author={Griesheimer, David P and Martin, William R},
+  journal={Arbor},
+  volume={1001},
+  pages={48109},
+  year={2004}
+}
+
 @article{griesheimer2008integrated,
   title={An integrated thermal hydraulic feedback method for Monte Carlo reactor calculations},
   author={Griesheimer, David P and Aumiller, David L and Gill, Daniel F and Lane, Jeffrey W},
